--- a/ud851-Sunshine-student/S06.02-Exercise-SettingsFragment/app/src/main/AndroidManifest.xml
+++ b/ud851-Sunshine-student/S06.02-Exercise-SettingsFragment/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
-        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".settings.SettingsActivity" />
     </application>
 
 </manifest>
